--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,6 +31,11 @@ body {
   text-shadow: 0 0 4px rgba(255, 255, 255, 1);
 }
 
+.text-blur-xs {
+  color: transparent;
+  text-shadow: 0 0 2px rgba(255, 255, 255, 1);
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
