Modified nav hrefs

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,6 +21,10 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .text-blur-l {
   color: transparent;
   text-shadow: 0 0 8px rgba(255, 255, 255, 1);
