--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,7 +10,8 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-body {
+body, html {
+  height: 100%;
   color: rgb(var(--foreground-rgb));
   font-family: 'Fahkwang', sans-serif;
   background: linear-gradient(
@@ -19,10 +20,9 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
-
-html {
-  scroll-behavior: smooth;
+    background-color: #242526;
+    scroll-behavior: smooth;
+    padding-bottom: env(safe-area-inset-bottom);
 }
 
 .text-blur-l {
