--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,19 +10,14 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-body, html {
+body,
+html {
   height: 100%;
   color: rgb(var(--foreground-rgb));
   font-family: 'Fahkwang', sans-serif;
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-    background-color: #242526;
-    scroll-behavior: smooth;
-    padding-bottom: env(safe-area-inset-bottom);
+  background-color: #242526;
+  scroll-behavior: smooth;
+  padding-bottom: env(safe-area-inset-bottom);
 }
 
 .text-blur-l {
